Updating Logo img and navbar overlap issue.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -757,7 +757,8 @@ blockquote small {
     height: auto;
 }
 .centered .navbar-brand {
-    padding: 30px 0
+    /*padding: 30px 0*/
+    padding: 0 0 10px 0;
 }
 .navbar-collapse {
     width: auto;
